--- a/business/build.gradle
+++ b/business/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -24,16 +23,10 @@ android {
     sourceSets.main {
         jniLibs.srcDirs = ['libs']
     }
-
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    api "org.jetbrains.kotlin:kotlin-stdlib-jre7:$rootProject.ext.kotlinVersion"
-    api "org.jetbrains.kotlin:kotlin-reflect:$rootProject.ext.kotlinVersion"
-
-    api "com.android.support:appcompat-v7:${rootProject.ext.supportVersion}"
-    api "com.android.support:design:${rootProject.ext.supportVersion}"
-    api "com.android.support.constraint:constraint-layout:${rootProject.ext.dependencies.constraintLayout}"
+    api project(":library")
 }
