--- a/config.gradle
+++ b/config.gradle
@@ -1,8 +1,8 @@
 ext {
     gradleVersion = '3.0.0'
     compileSdkVersion = 27
-    //buildToolsVersion = '25.0.3'
     supportVersion = '27.1.1'
+    kotlinVersion = '1.2.61'
 
     testUrl = "\"https://testUrl\""
     productUrl = "\"https://productUrl\""
@@ -18,5 +18,9 @@ ext {
             storePassword : "123123",
             keyAlias      : "key0",
             keyPassword   : "123123",
+    ]
+
+    dependencies = [
+            constraintLayout : "1.1.2",
     ]
 }
