--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     apply from: "config.gradle"
     repositories {
         google()
-        jcenter()
+        jcenter(){ url 'http://jcenter.bintray.com/'}
     }
 
     dependencies {
@@ -16,7 +16,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        jcenter(){ url 'http://jcenter.bintray.com/'}
     }
 }
 
