--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,7 +92,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation project(":forecast")
-    implementation project(":news")
-    implementation project(":personal")
+    api project(":forecast")
+    api project(":news")
+    api project(":personal")
 }
