--- a/business/build.gradle
+++ b/business/build.gradle
@@ -27,5 +27,5 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    api project(":library")
+    api project(":CommonLibrary")
 }
