--- a/news/build.gradle
+++ b/news/build.gradle
@@ -23,5 +23,5 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    api project(":business")
+    api project(":CommonBusiness")
 }
